# slack-toolbox

./: .bandit.yml  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_DOCUMENTATION.md  FAQ.md  LICENSE  Makefile  PRE_COMMIT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.en.md  README.fr.md  README.md  SLACK_API_GUIDE.md  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup_wizard.py  slack-manager.py
.github/workflows/: ci.yml  release.yml
config/: config.example.json
cron/: README.md  daily_backup.sh  monthly_audit.sh  weekly_inactive_report.sh
docs/archive/: ARCHITECTURE.md  CONTRIBUTING.md  FAQ.md  PRE_COMMIT_GUIDE.md  QUICKSTART.md  README.md  SLACK_API_GUIDE.md
examples/: EXAMPLES.md  channels.csv  users.csv
lib/: __init__.py  alerts.py  logger.py  notifier.py  pdf_generator.py  script_base.py  slack_client.py  utils.py  validators.py
scripts/: __init__.py
scripts/audit/: __init__.py  activity_report.py  export_channel_history.py  file_report.py  find_duplicates.py  inactive_users.py  permissions_audit.py
scripts/channels/: __init__.py  archive_channel.py  create_channels.py  find_inactive.py  list_channels.py  manage_members.py
scripts/monitoring/: __init__.py
scripts/reports/: __init__.py  export_pdf.py
scripts/tools/: __init__.py  test_connection.py  validate_csv.py
scripts/users/: __init__.py  deactivate_user.py  export_users.py  invite_users.py  list_users.py  user_stats.py
scripts/utils/: __init__.py  compare_backups.py  full_backup.py  generate_dashboard.py  generate_template.py  search.py  send_notification.py  smart_alerts.py  workspace_stats.py
scripts/workspace/: __init__.py  list_emojis.py
tests/: conftest.py  test_all_scripts.py  test_csv_validation.py  test_integration.py  test_script_base.py  test_slack_client.py  test_utils.py  test_validators.py
wiki/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPPEMENT.md  FAQ.md  INSTALLATION.md  SECURITE.md  UTILISATION.md
