[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-management-platform"
version = "1.0.0"
description = "Enterprise Slack workspace management tools - Complete suite for managing users, channels, audit, and compliance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GitCroque", email = "gitcroque@example.com"}
]
keywords = ["slack", "management", "automation", "audit", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "slack-sdk>=3.23.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# PDF export functionality
pdf = [
    "reportlab>=4.0.0",
    "pypdf>=3.17.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

# Development dependencies
dev = [
    "pre-commit>=3.5.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "mypy>=1.7.0",
]

# All dependencies for full installation
all = [
    "slack-management-platform[pdf,test,dev]",
]

[project.urls]
Homepage = "https://github.com/GitCroque/slack-script"
Documentation = "https://github.com/GitCroque/slack-script#readme"
Repository = "https://github.com/GitCroque/slack-script"
Issues = "https://github.com/GitCroque/slack-script/issues"

[project.scripts]
# Main CLI entry points
slack-manager = "slack_manager:main"
slack-wizard = "setup_wizard:main"

# User management
slack-list-users = "scripts.users.list_users:main"
slack-invite-users = "scripts.users.invite_users:main"
slack-export-users = "scripts.users.export_users:main"

# Channel management
slack-list-channels = "scripts.channels.list_channels:main"
slack-create-channels = "scripts.channels.create_channels:main"

# Audit & reporting
slack-audit-permissions = "scripts.audit.permissions_audit:main"
slack-activity-report = "scripts.audit.activity_report:main"

# Utilities
slack-backup = "scripts.utils.full_backup:main"
slack-stats = "scripts.utils.workspace_stats:main"
slack-test = "scripts.utils.test_connection:main"

# Monitoring
slack-alerts = "scripts.utils.smart_alerts:main"
slack-notify = "scripts.utils.send_notification:main"

[tool.setuptools]
packages = ["lib", "scripts", "scripts.users", "scripts.channels", "scripts.audit", "scripts.workspace", "scripts.utils"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md"]

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=lib --cov=scripts"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
# Strict type checking
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Import handling
follow_imports = "normal"
ignore_missing_imports = true
# Error reporting
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.coverage.run]
source = ["lib", "scripts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]
